--- a/menus/procedural_shop_menu.yml
+++ b/menus/procedural_shop_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Procedural Item Shop'
+Shop name: '[EM] Magasin de butin proceduriale'
 Reroll button slot: 4
 Store item slots:
 - 9
