--- a/custombosses/zombie_friends_friend.yml
+++ b/custombosses/zombie_friends_friend.yml
@@ -1,6 +1,6 @@
 isEnabled: true
 entityType: ZOMBIE
-name: '&7Zombie Friend'
+name: '&7Ami zombie'
 level: dynamic
 timeout: 0
 isPersistent: false
@@ -9,3 +9,4 @@ damageMultiplier: 0.5
 isBaby: false
 dropsEliteMobsLoot: false
 dropsVanillaLoot: false
+spawnChance: 0.0
