--- a/menus/custom_shop_menu.yml
+++ b/menus/custom_shop_menu.yml
@@ -1,4 +1,4 @@
-Shop name: '[EM] Buy or Sell'
+Shop name: '[EM] Achetez ou vendez'
 Reroll button slot: 4
 Store item slots:
 - 9
@@ -46,11 +46,10 @@ Store item slots:
 - 51
 - 52
 - 53
-Full inventory message: '[EliteMobs] &4Your inventory is full! You can''t buy items
-  until you get some free space.'
+Full inventory message: '[EliteMobs] &4Ton inventaire est plein! Tu ne peux rien acheter tant que tu es pas vide de tes affaires!'
 Reroll button:
   material: PLAYER_HEAD
-  name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
+  name: '&4&lEliteMobs &r&cfait par &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
+  - '&8Supportez les plugins que vous aimez!'
   owner: magmaguy
