--- a/npcs/guild_attendant.yml
+++ b/npcs/guild_attendant.yml
@@ -1,23 +1,23 @@
 isEnabled: true
 name: Gillian
-role: <Guild Attendant>
+role: <Gildenmitglied>
 profession: LIBRARIAN
 location: EliteMobs_adventurers_guild,283.5,91,229.5,179,0
 greetings:
-- Welcome to the\nAdventurer's Guild!
-- Welcome!
+- Willkommen in der Gilde\nder Abenteurer!
+- Willkommen!
 dialog:
-- Check the questboard to\nsee active quests!
-- You can talk to me to\nchange your guild rank!
-- You can sell items to the\nblacksmith for coins!
-- You can talk to the arena\nmaster to take the arena on!
-- You can buy equipment from\nthe blacksmith!
-- You can talk to the combat\nmaster to check your combat level!
-- Unlocking new guid tiers\nincreases your maximum health!
+- Siehe mal nach dem Questboard\num aktive Quests zu sehen!
+- Mich kannst du fragen,\nwenn du glaubst du verdienst\n einen höheren Rang!
+- Du kannst Ausrüstung beim\nSchmied verkaufen!
+- Du kannst mit dem Arenaleiter\nsprechen um in der Arena zu kämpfen!
+- Du kannst Ausrüstung\nvom Schmied kaufen!
+- Sprich mit dem Schwertmeister\num dein Kampfskill zu überprüfen!
+- In der Gilde aufzusteigen\nerhöht deine Gesundheit!
 farewell:
-- See you soon!
-- Thanks for stopping by!
-- Happy hunting!
+- Auf wiedersehen!
+- Danke für's Vorbeischauen!
+- Gute Jagd!
 canMove: false
 canTalk: true
 activationRadius: 3.0
