--- a/menus/buy_or_sell_menu.yml
+++ b/menus/buy_or_sell_menu.yml
@@ -6,16 +6,17 @@ Information button:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
-  - '&aClick on the emerald to buy items!'
-  - '&cClick on the redstone to sell items!'
+  - '&8Unterstütze die Plugins, die du magst!'
+  - '&aKlicke auf den Smaragd um Items zu kaufen!'
+  - '&cKlicke auf das Redstone um Items zu verkaufen!'
   owner: magmaguy
 Buy procedurally generated items:
   material: EMERALD
-  name: Buy items
+  name: Ausrüstung kaufen
 Buy custom items:
   material: EMERALD
-  name: Buy custom items
+  name: Ausrüstung kaufen
 Sell items:
   material: REDSTONE
-  name: Sell items
+  name: Ausrüstung verkaufen
+
