--- a/menus/custom_shop_menu.yml
+++ b/menus/custom_shop_menu.yml
@@ -46,11 +46,11 @@ Store item slots:
 - 51
 - 52
 - 53
-Full inventory message: '[EliteMobs] &4Your inventory is full! You can''t buy items
-  until you get some free space.'
+Full inventory message: '[EliteMobs] &4Dein Inventar ist voll! Du kannst keine Ausrüstung
+  kaufen, bis du etwas Platz gemacht hast.'
 Reroll button:
   material: PLAYER_HEAD
   name: '&4&lEliteMobs &r&cby &4&lMagmaGuy'
   lore:
-  - '&8Support the plugins you enjoy!'
+  - '&8Unterstütze die Plugins, die du magst!
   owner: magmaguy
